--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -12,7 +12,7 @@
 
     <body>
         <img class="mb-2 img-fluid rounded" src="{% static 'media/logoTitleWhite.png' %}" width="350" height="auto">
-        <form class="form-signin" method="POST" action="{% url 'login' %}">
+        <form class="form-signin" method="POST" action="/login/">
             {% csrf_token %} {% if form.errors %}
             <div class="alert alert-danger" role="alert">
                 <strong>Invalid - </strong>Your username and password didn't match. Please try again.
