Added pick count info on home page to inform user of how many picks they have made. Added automatic email when a user account is created.

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -45,7 +45,7 @@
                                 <th scope="col">Home</th>
                                 <th scope="col">Score</th>
                                 <th scope="col">Away</th>
-                                <th scope="col">Pick</th>
+                                <th scope="col">Pick ({{ pickCount }}/{{ gameCount }})</th>
                             </tr>
                         </thead>
                         <tbody>
