--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -37,7 +37,7 @@
             <button type="submit" class="btn btn-blue" value="login">Login</button>
             <input type="hidden" name="next" value="{{ next }}">
             <div class="mt-3">
-                <a href="account/create" style="color:white;">Create Account</a>
+                <a href="/account/create/" style="color:white;">Create Account</a>
             </div>
             <p class="mt-4 text-muted">&copy; 2020-2021</p>
         </form>
