Updated font, added date display to pick page. Made table row greyed out if picks are disabled.

--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -34,7 +34,7 @@
                 <label for="password" class="sr-only">{{ form.password.label_tag }}</label>
                 <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
             </div>
-            <button type="submit" class="btn btn-blue" value="login">Login</button>
+            <button type="submit" class="btn btn-sm btn-main" value="login">Login</button>
             <input type="hidden" name="next" value="{{ next }}">
             <div class="mt-3">
                 <a href="/account/create/" style="color:white;">Create Account</a>
