--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -1,16 +1,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design for Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet">{% load static %}
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200&display=swap" rel="stylesheet"> {% load static %}
     <link href="{% static 'css/global.css' %}" rel="stylesheet">
     <link href="{% static 'css/datatables.min.css' %}" rel="stylesheet">
 </head>
-<nav class="navbar navbar-expand-lg mb-3 navbar-dark" style="background-color: #292727">
+<nav class="navbar navbar-expand-lg mb-2 navbar-dark" style="background-color: #292727">
     <a class="navbar-brand" href="#">
         <img class="rounded img-fluid" src="{% static 'media/logoTitleWhite.png' %}" width="200" height="auto">
     </a>
