--- a/picks/static/picks/css/picks.css
+++ b/picks/static/picks/css/picks.css
@@ -30,23 +30,23 @@ input[type=radio]:checked+label::before {
 /* IMAGE STYLES */
 
 [type=radio]+img {
-    cursor: pointer
+    cursor: pointer;
+    border-radius: 50%;
 }
 
 
 /* CHECKED STYLES */
 
 [type=radio]:checked:disabled+img {
-    outline: 2px solid rgb(58, 59, 59);
     opacity: 0.6;
 }
 
 [type=radio]:checked+img {
-    outline: 2px solid rgb(58, 59, 59);
     background-color: #33b5e5;
     opacity: 0.6;
 }
 
 tr.disabled {
     background-color: #8b8c8f;
+    opacity: 0.5;
 }
